--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,7 @@
   --c-main-background: black;
   --c-main-title: #9F7510;
   --c-main-text: white;
+  --o-main-text: 78%;
 }
 
 /* #region Main Style */
@@ -14,14 +15,15 @@ body {
   background-color: var(--c-main-background);
 }
 
-p {
-  color: var(--c-main-text);
-  opacity: 74%;
-}
-
 h1 {
   color: var(--c-main-title);
   font-size: 2rem;
+}
+
+a, p {
+  color: var(--c-main-text);
+  text-decoration: none;
+  opacity: var(--o-main-text);
 }
 
 /* #endregion */
@@ -35,15 +37,21 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 
 header img {
   width: 45%;
+  height: 50px;
   padding: 0.5rem 0 0.5rem 0.5rem;
 }
 
 header .big_navigation {
   display: none;
+}
+
+header .phone_menu_button:hover {
+  cursor: pointer;
 }
 
 header .phone_menu_button img {
@@ -56,6 +64,30 @@ header .phone_menu_button img {
 
 header .phone_menu_button .phone_menu_navigation {
   display: none;
+  position: absolute;
+  background-color: #322B2B;
+  left: 0;
+  top: 60px;
+  width: 100%;
+  list-style: none;
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
+}
+
+header .phone_menu_button .phone_menu_navigation li {
+  text-align: center;
+  border-top: solid 3px var(--c-main-title);
+}
+
+header .phone_menu_button .phone_menu_navigation li a, header .phone_menu_button .phone_menu_navigation li p {
+  display: block;
+  font-size: 25px;
+  font-weight: bold;
+  width: 100%;
+}
+
+header .phone_menu_button .phone_menu_navigation li:last-of-type {
+  border-bottom: solid 3px var(--c-main-title);
 }
 
 /* #endregion */
@@ -139,5 +171,51 @@ header .phone_menu_button .phone_menu_navigation {
 
 /* #endregion */
 /* #region Home page */
+/* #endregion */
+/* #region Animations */
+@-webkit-keyframes deployAnimation {
+  0% {
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+  100% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+  }
+}
+
+@keyframes deployAnimation {
+  0% {
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+  100% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+  }
+}
+
+@-webkit-keyframes retractAnimation {
+  0% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+  }
+  100% {
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+}
+
+@keyframes retractAnimation {
+  0% {
+    -webkit-transform: rotateX(0deg);
+            transform: rotateX(0deg);
+  }
+  100% {
+    -webkit-transform: rotateX(-90deg);
+            transform: rotateX(-90deg);
+  }
+}
+
 /* #endregion */
 /*# sourceMappingURL=main.css.map */
