--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,17 @@
 @import url("./font.css");
 :root {
   --c-main-background: black;
+  --c-overlay-background:#322B2B;
   --c-main-title: #9F7510;
   --c-main-text: white;
   --o-main-text: 78%;
 }
 
 /* #region Main Style */
+.wrapper {
+  width: 100%;
+}
+
 body, html {
   height: 100%;
 }
@@ -20,7 +25,7 @@ h1 {
   font-size: 2rem;
 }
 
-a, p {
+a, p, label {
   color: var(--c-main-text);
   text-decoration: none;
   opacity: var(--o-main-text);
@@ -64,8 +69,9 @@ header .phone_menu_button img {
 
 header .phone_menu_button .phone_menu_navigation {
   display: none;
+  z-index: 50;
   position: absolute;
-  background-color: #322B2B;
+  background-color: var(--c-overlay-background);
   left: 0;
   top: 60px;
   width: 100%;
@@ -81,7 +87,7 @@ header .phone_menu_button .phone_menu_navigation li {
 
 header .phone_menu_button .phone_menu_navigation li a, header .phone_menu_button .phone_menu_navigation li p {
   display: block;
-  font-size: 25px;
+  font-size: 1.56rem;
   font-weight: bold;
   width: 100%;
 }
@@ -171,6 +177,40 @@ header .phone_menu_button .phone_menu_navigation li:last-of-type {
 
 /* #endregion */
 /* #region Home page */
+/* #endregion */
+/* #region Login page */
+#login-page form {
+  display: block;
+  text-align: center;
+  padding-top: 50%;
+}
+
+#login-page form input {
+  background-color: var(--c-overlay-background);
+  border: none;
+  display: block;
+  height: 40px;
+  width: 278px;
+  margin: 0 auto;
+}
+
+#login-page form input[type="submit"] {
+  margin-top: 1rem;
+  background-color: var(--c-main-title);
+  width: 160px;
+  height: 58px;
+  border-radius: 15px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#login-page form label {
+  display: block;
+  font-size: 1.9rem;
+  margin: 0.5rem 0;
+}
+
 /* #endregion */
 /* #region Animations */
 @-webkit-keyframes deployAnimation {
