--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -2,17 +2,18 @@
 
 :root {
     --c-main-background: black;
+    --c-overlay-background:#322B2B;
     --c-main-title: #9F7510;
     --c-main-text: white;
     --o-main-text: 78%;
 }
 
 /* #region Main Style */
-
+.wrapper { width: 100%; }
 body, html { height: 100%; }
 body { background-color: var(--c-main-background); }
 h1 { color: var(--c-main-title); font-size: 2rem; }
-a, p { color:var(--c-main-text); text-decoration: none; opacity: var(--o-main-text); }
+a, p, label { color:var(--c-main-text); text-decoration: none; opacity: var(--o-main-text); }
 
 /* #endregion */
 
@@ -51,8 +52,9 @@ header {
 
         .phone_menu_navigation {
             display: none;
+            z-index: 50;
             position: absolute;
-            background-color: #322B2B;
+            background-color: var(--c-overlay-background);
             left: 0;
             top: 60px;
             width: 100%;
@@ -65,7 +67,7 @@ header {
 
                 a, p{
                     display: block;
-                    font-size: 25px;
+                    font-size: 1.56rem;
                     font-weight: bold;
                     width: 100%;
                 }
@@ -79,6 +81,7 @@ header {
 }
 
 /* #endregion */
+
 
 /* #region Landing Page */
 
@@ -156,6 +159,47 @@ header {
 /* #region Home page */
 
 /* #endregion */
+
+
+/* #region Login page */
+
+#login-page {
+    form {
+        display: block;
+        text-align: center;
+        padding-top: 50%;
+
+        input {
+            background-color: var(--c-overlay-background);
+            border: none;
+            display: block;
+            height: 40px;
+            width: 278px;
+            margin: 0 auto;
+
+            &[type="submit"] {
+                margin-top: 1rem;
+                background-color: var(--c-main-title);
+                width: 160px;
+                height: 58px;
+                border-radius: 15px;
+                text-transform: uppercase;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+
+        label {
+            display: block;
+            font-size: 1.9rem;
+            margin:0.5rem 0;
+        }
+    }
+}
+
+/* #endregion */
+
+
 
 /* #region Animations */
 
