--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,9 @@
-<main>
+<main id="login-page" class="wrapper">
     <form action="/login" method="post">
-        <label for="username">Username:</label> <br>
-        <input type="text" name="username" id="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="password" name="password" id="password"><br>
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username">
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password">
         <input type="submit" value="Login">
     </form>
 </main>
