--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<main class="wrapper">
+<main id="register-page" class="wrapper">
     <form action="/register" method="post">
         <label for="username">Username:</label> <br>
         <input type="text" name="username" id="username"><br>
