--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <main>
 
+    <img src="/public/assets/images/firering.png" alt="ring">
+
     <h1>One ring to rule them all...</h1>
 
     <p>The 'Lord Of The Rings' is among the most
