--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -3,7 +3,7 @@
 <main id="quiz-page">
     <div id="quiz-box">
         <noscript>
-            <p>You need Javascript enabled for this quiz to work</p>
+            <p>You need Javascript to run this quiz</p>
         </noscript>
     </div>
 </main>
