--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
     <img src="/public/assets/images/firering.png" alt="ring"> 
 
-    <h1>One ring to rule them all...</h1>
+    <h1>One ring to rule them all...</h1><br>
 
     <p>The 'Lord Of The Rings' is among the most
         popular fantasy book and movie series in 
