--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -28,7 +28,8 @@
 
 /* #region Main Style */
 .wrapper {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 
 body,
@@ -76,7 +77,7 @@ header {
     .big_navigation {
         display: none;
 
-       > ul {
+        >ul {
             display: flex;
             margin-right: 0.5rem;
 
@@ -86,18 +87,19 @@ header {
                 }
             }
 
-            > li {
+            >li {
                 line-height: 60px;
                 padding: 0 6px;
                 font-size: 1.56rem;
                 position: relative;
 
-                a, p {
+                a,
+                p {
                     color: var(--c-main-title);
                     font-weight: bold;
                 }
 
-                > ul {
+                >ul {
                     display: none;
                     position: absolute;
                     right: 0px;
@@ -105,17 +107,17 @@ header {
                     z-index: 50;
                     transform-origin: top center;
 
-                    > li {
+                    >li {
                         width: 100px;
                         text-align: center;
                         border-top: solid 3px var(--c-main-title);
-                        
+
                         a {
                             font-size: 1rem;
                         }
                     }
 
-                    > li:last-of-type {
+                    >li:last-of-type {
                         border-bottom: solid 3px var(--c-main-title);
                     }
                 }
@@ -184,7 +186,6 @@ header {
 }
 
 /* #endregion */
-
 
 /* #region Landing Page */
 
@@ -285,12 +286,53 @@ header {
 /* #endregion */
 
 /* #region Home page */
+#main-page {
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: reverse;
+    margin-top: 3rem;
+
+    .left {
+        margin: 0 auto;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .right {
+        margin: 0 auto;
+        margin-bottom: 2rem;
+        max-width: 250px;
+
+        h1 {
+            border-bottom: solid 3px var(--c-main-title);
+            font-size: 21px;
+            text-align: center;
+            margin-bottom: 1.5rem;
+            padding-bottom: 0.3rem;
+
+        }
+
+        p {
+            font-size: 14px;
+            line-height: 1.05rem;
+        }
+
+        a {
+            color: var(--c-main-title);
+            font-weight: bold;
+            opacity: 1;
+        }
+    }
+}
 
 /* #endregion */
 
 /* #region Login/Register page */
 
-#login-page, #register-page {
+#login-page,
+#register-page {
 
     form {
 
