--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -54,6 +54,11 @@ label {
     opacity: var(--o-main-text);
 }
 
+.icon {
+    width: 25px;
+    height: 25px;
+}
+
 /* #endregion */
 
 /* #region Header */
