--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -5,7 +5,7 @@
     <h1>Favorites</h1>
 
         <form action="/downloadfavourites" method="get">
-                <input class="favorites-download" type="image" src="/assets/icon/download.svg" alt="Download" title="Download All">
+                <input class="icon" type="image" src="/assets/icon/download.svg" alt="Download" title="Download All">
         </form>        
 
         <section class="quotes">
