--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -2,7 +2,9 @@
 
 <main id= "favorites_container">
 
-    <h1>Favorites</h1>
+    <section class="titelbalk">
+        <h1>Favorites</h1>
+    </section>
 
         <form action="/downloadfavourites" method="get">
                 <input class="icon" type="image" src="/assets/icon/download.svg" alt="Download" title="Download All">
