--- a/public/css/main.css
+++ b/public/css/main.css
@@ -334,6 +334,24 @@ header .account-header-piece {
   opacity: 1;
 }
 
+.titelbalk {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-bottom: solid 3px var(--c-main-title);
+  font-size: 30px;
+  margin-top: 3rem;
+  padding-bottom: 0.3rem;
+}
+
+/* #endregion */
+/* #region Favorites/Blacklisted page */
 /* #endregion */
 /* #region Login/Register page */
 #login-page form,
