--- a/public/css/main.css
+++ b/public/css/main.css
@@ -196,7 +196,7 @@ header .account-header-piece {
   width: 330px;
   height: 230px;
   left: calc(50% - (330px / 2));
-  top: calc(50% - (230px / 2));
+  top: calc(50% - (230px / 1.5));
   background-color: #9F7510;
   background-color: white;
   border-radius: 15px;
@@ -232,6 +232,7 @@ header .account-header-piece {
 
 #landing-page section {
   max-width: 514px;
+  margin-top: 3rem;
 }
 
 #landing-page section h1 {
@@ -273,6 +274,7 @@ header .account-header-piece {
     position: absolute;
     left: 50%;
     top: 50%;
+    margin-top: 0;
     -webkit-transform: translateX(-50%) translateY(25%);
             transform: translateX(-50%) translateY(25%);
     width: 518px;
