--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,6 +1,6 @@
 <script src="/js/favorites.js" defer></script>
 
-<main id= "favorites_container">
+<main id= "favorites_container" class="wrapper">
 
     <section class="titelbalk">
         <h1>Favorites</h1>
