--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -2,7 +2,7 @@
 
 <main id= "favorites_container" class="wrapper">
 
-    <section class="titelbalk">
+    <section class="title-bar">
         <h1>Favorites</h1>
     
         <form action="/downloadfavourites" method="get">
